force-app/main/default/objects/Battle_Station1__c/Battle_Station1__c.object-meta.xml
<CustomObject>
    <label>Battle Station1</label>
    <nameField>
        <label>Battle Station Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Battle Station1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>