force-app/main/default/objects/Battle_Station1__c/fields/Player_Email__c.field-meta.xml
<CustomField>
    <fullName>BattleStation_Email__c</fullName>
    <label>BattleStation Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>