force-app/main/default/objects/Battle_Station1__c/fields/Reource_Count__c.field-meta.xml
<CustomField>
    <fullName>Reource_Count__c</fullName>
    <label>Reource Count</label>
    <summaryFilterItems>
        <field>Resource1__c.Quantity__c</field>
        <operation>greaterThan</operation>
        <value>50</value>
    </summaryFilterItems>
    <summaryForeignKey>Resource1__c.Battle_Station1__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>