force-app/main/default/objects/Battle_Station1__c/fields/Supply_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Supply_Total_Cost__c</fullName>
    <label>Supply Total Cost</label>
    <summarizedField>Supply1__c.Total_Cost__c</summarizedField>
    <summaryFilterItems>
        <field>Supply1__c.Total_Cost__c</field>
        <operation>greaterThan</operation>
        <value>100</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Supply1__c.Quantity__c</field>
        <operation>greaterThan</operation>
        <value>25</value>
    </summaryFilterItems>
    <summaryForeignKey>Supply1__c.Battle_Station1__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>